#5737: Apostrophe 2: Fix VideoPress display if alignwide or alignfull set

--- a/apostrophe-2/css/blocks.css
+++ b/apostrophe-2/css/blocks.css
@@ -93,7 +93,6 @@ body {
 
 .apostrophe-2-no-sidebar .wp-block-embed.is-type-video.alignfull iframe {
 	width: 100% !important;
-	height: 100% !important;
 }
 
 .apostrophe-2-no-sidebar .wp-block-embed.is-type-video.alignfull:before {
@@ -101,15 +100,6 @@ body {
 	display: block;
 }
 
-.apostrophe-2-no-sidebar .wp-block-embed.is-type-video.alignfull iframe {
-	position:  absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	width: 100% !important;
-	height: 100% !important;
-}
 
 /* Wide Width */
 
@@ -123,20 +113,6 @@ body {
 		position: relative;
 	}
 
-	.apostrophe-2-no-sidebar .wp-block-embed.is-type-video.alignwide:before {
-		content: "";
-		display: block;
-	}
-
-	.apostrophe-2-no-sidebar .wp-block-embed.is-type-video.alignwide iframe {
-		position:  absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
-		width: 100%;
-		height: 100%;
-	}
 }
 
 /* Nested Blocks */
